[package]
name = "discv5_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discv5 = "0.2.1"
clap = { version = "4.1.8", features = ["derive"] }

tokio = { version = "1.26.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["json"] }
tracing-test = "0.2.4"

rand = { version = "0.8.4", package = "rand" }
hex = "0.4.3"
base64 = "0.21.0"

async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
env_logger = "0.10"
futures = "0.3.28"
libp2p = { version = "0.51.2", features = ["async-std", "dns", "kad", "mdns", "noise", "macros", "tcp", "websocket", "mplex", "yamux"] }
multiaddr = { version = "0.17.1" }

libp2p-gossipsub = "0.44.2"