[package]
name = "discv5_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discv5 = "0.2.1"
clap = { version = "4.1.8", features = ["derive"] }

tokio = { version = "1.26.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["json"] }
tracing-test = "0.2.4"

rand = { version = "0.8.4", package = "rand" }
hex = "0.4.3"
base64 = "0.21.0"

async-trait = "0.1"
env_logger = "0.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = "0.4.24"

futures = "0.3.28"
async-std = "1.12.0"
libp2p = { version = "0.51.2", features = ["full"] }
multiaddr = { version = "0.17.1" }
#libp2p-quic = "0.7.0-alpha.3"
libp2p-quic = { version = "0.7.0-alpha.3", features = ["async-std"] }
